--- a/www/list.html
+++ b/www/list.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./dep/jquery-mobile/jquery.mobile.structure-1.3.2.min.css">
     <link rel="stylesheet" type="text/css" href="./dep/jquery-mobile/jquery.mobile.theme-1.3.2.min.css">
     <script src="./dep/jquery/jquery.js"></script>
-    <script src="./dep/jquery-mobile/jquery.mobile-1.3.2.js"></script>
+    <script src="./dep/jquery-mobile/jquery.mobile-1.3.2.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/list.css" />
     <title>百度雷达</title>
@@ -119,6 +119,7 @@
         
     </section>
 
-    <script type="text/javascript" src="js/list.js"></script>
+    <script type="text/javascript" src="./cordova.js"></script>
+    <script src="./js/list.js"></script>
 </body>
 </html>
