--- a/www/detail.html
+++ b/www/detail.html
@@ -15,14 +15,14 @@
 </head>
 
 
-<section id="detail" data-role="page" data-theme="a">
+<section id="detail" data-role="page" data-theme="c">
     <header data-role="header" class="rec-title">
         <h1>详细信息</h1>
         <a href="#index" data-icon="back" data-iconpos="notext" data-rel="back" data-shadow="false" data-iconshadow="false">首页</a>
     </header>
 
-    <article data-role="content">
-        
+    <article id="detail-content" data-role="content" data-them="d">
+        <div class="no-data-block ui-loading">正在获取地点数据...</div>
     </article>
 
     <footer data-role="footer" data-position="fixed" data-theme="a">
