--- a/platforms/android/assets/www/detail.html
+++ b/platforms/android/assets/www/detail.html
@@ -18,7 +18,7 @@
 <section id="detail" data-role="page" data-theme="c">
     <header data-role="header" class="rec-title">
         <h1>详细信息</h1>
-        <a href="#index" data-icon="back" data-iconpos="notext" data-rel="back" data-shadow="false" data-iconshadow="false">首页</a>
+        <a href="index.html" data-icon="back" data-iconpos="notext" data-rel="back" data-shadow="false" data-iconshadow="false">首页</a>
     </header>
 
     <article id="detail-content" data-role="content" data-them="d">
