--- a/www/detail.html
+++ b/www/detail.html
@@ -10,7 +10,7 @@
     <script src="./dep/jquery/jquery.js"></script>
     <script src="./dep/jquery-mobile/jquery.mobile-1.3.2.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
     <title>百度雷达</title>
 </head>
 
