--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <script src="./dep/jquery-mobile/jquery.mobile-1.3.2.min.js"></script>
     <script src="./dep/iscroll/iscroll.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="asset/index.css" />
     <title>百度雷达</title>
 </head>
 
@@ -71,6 +71,6 @@
 
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="asset/index.js"></script>
 </body>
 </html>
