--- a/www/list.html
+++ b/www/list.html
@@ -9,7 +9,7 @@
     <script src="./dep/jquery/jquery.js"></script>
     <script src="./dep/jquery-mobile/jquery.mobile-1.3.2.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="css/list.css" />
+    <link rel="stylesheet" type="text/css" href="asset/list.css" />
     <title>百度雷达</title>
 </head>
 <body>
@@ -119,7 +119,7 @@
         
     </section>
 
-    <script type="text/javascript" src="./cordova.js"></script>
-    <script src="./js/list.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script src="asset/list.js"></script>
 </body>
 </html>
